--- a/index.html
+++ b/index.html
@@ -248,7 +248,8 @@
                             </p>
                             <div class="ei-banner-btn">
                                <!-- <a href="#">Buy on Currency ,Crypto , pancake</a> -->
-                               <button type="button" class="btn btn-primary btn-lg">Buy RAGSCOIN</button>
+                               <!-- <button type="button" class="btn btn-primary btn-lg">Buy RAGSCOIN</button> -->
+                                <a href="https://pancakeswap.finance/swap#/swap?outputCurrency=0xa923180Ef71e81F21b36941Fb62D954AF21C60A3" class="" style="width: 200px;" target="_blank">Buy RAGSCOIN</a>
                             </div>
                         <div class="ei-banner-mbl-mockup wow fadeInRight" data-wow-delay="600ms"
                             data-wow-duration="1500ms">
