Added buy button on top

--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
                     <li><a class="nav-link" href="#ei-appdownload">Donation</a></li>
                     <li><a class="nav-link" href="#ei-partner">Partner</a></li>
                     <li><a class="nav-link" href="#ei-faq">How to Buy</a></li>
+                    <li><a class="nav-link" href="https://pancakeswap.finance/swap#/swap?outputCurrency=0xa923180Ef71e81F21b36941Fb62D954AF21C60A3" target="_blank"><button type="button" class="btn btn-primary btn-lg">Buy RAGSCOIN</button></a></li>
                 </ul>
             </nav>
             <!-- <div class="h-eight-social ul-li float-right clearfix">
@@ -249,7 +250,7 @@
                             <div class="ei-banner-btn">
                                <!-- <a href="#">Buy on Currency ,Crypto , pancake</a> -->
                                <!-- <button type="button" class="btn btn-primary btn-lg">Buy RAGSCOIN</button> -->
-                                <a href="https://pancakeswap.finance/swap#/swap?outputCurrency=0xa923180Ef71e81F21b36941Fb62D954AF21C60A3" class="" style="width: 200px;" target="_blank">Buy RAGSCOIN</a>
+                               <!-- <a href="https://pancakeswap.finance/swap#/swap?outputCurrency=0xa923180Ef71e81F21b36941Fb62D954AF21C60A3" class="" style="width: 200px;" target="_blank">Buy RAGSCOIN</a> -->
                             </div>
                         <div class="ei-banner-mbl-mockup wow fadeInRight" data-wow-delay="600ms"
                             data-wow-duration="1500ms">
