Mobile view - links added

--- a/index.html
+++ b/index.html
@@ -210,6 +210,8 @@
                             <li><a class="nav-link" href="#ei-partner">Partner</a></li>
 
                             <li><a class="nav-link" href="#ei-faq">How to Buy</a></li>
+                            <li><a class="nav-link" href="http://165.22.214.188/" target="_blank">Login</a></li>
+                            <li><a class="nav-link" href="https://pancakeswap.finance/swap#/swap?outputCurrency=0xa923180Ef71e81F21b36941Fb62D954AF21C60A3" target="_blank"><button type="button" class="btn btn-primary btn-lg">Buy RAGSCOIN</button></a></li>
                         </ul>
                     </nav>
                 </div>
