smart address css

--- a/index.html
+++ b/index.html
@@ -153,24 +153,38 @@
         .text-justify {
             text-align: justify;
         }
+
+
+        .crypto_address {
+            color: #fff;
+            padding: 10px 15px;
+            border: 2px solid #fff;
+            border-radius: 18px;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            background-color: transparent;
+            width: 100%;
+            font-weight: 600;
+        }
     </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-204918075-1">
-</script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-204918075-1');
-</script>
-
-<!-- Start Alexa Certify Javascript -->
-<script type="text/javascript">
-    _atrk_opts = { atrk_acct:"jXk6x1CFP120KY", domain:"ragscoin.io",dynamic: true};
-    (function() { var as = document.createElement('script'); as.type = 'text/javascript'; as.async = true; as.src = "https://certify-js.alexametrics.com/atrk.js"; var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(as, s); })();
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-204918075-1">
     </script>
-    <noscript><img src="https://certify.alexametrics.com/atrk.gif?account=jXk6x1CFP120KY" style="display:none" height="1" width="1" alt="" /></noscript>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-204918075-1');
+    </script>
+
+    <!-- Start Alexa Certify Javascript -->
+    <script type="text/javascript">
+        _atrk_opts = { atrk_acct: "jXk6x1CFP120KY", domain: "ragscoin.io", dynamic: true };
+        (function () { var as = document.createElement('script'); as.type = 'text/javascript'; as.async = true; as.src = "https://certify-js.alexametrics.com/atrk.js"; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(as, s); })();
+    </script>
+    <noscript><img src="https://certify.alexametrics.com/atrk.gif?account=jXk6x1CFP120KY" style="display:none"
+            height="1" width="1" alt="" /></noscript>
     <!-- End Alexa Certify Javascript -->
 
 </head>
@@ -309,11 +323,6 @@
                                             <a target="_blank" href="https://t.me/ragscoin" class="fab fa-telegram">
                                             </a>
                                         </li>
-
-                                    </ul>
-                                </div>
-                                <div class="col-12 row">
-                                    <ul class="social-icon-list-bottom">
                                         <li>
                                             <a target="_blank" href="https://twitter.com/Ragscoin"
                                                 class="fab fa-twitter">
@@ -331,12 +340,15 @@
                                         </li>
                                     </ul>
                                 </div>
+                                <div class="col-xl-8 col-lg-8 col-md-10 col-sm-12 row" style="overflow: auto;">
+                                    <h6 class="text-white mb-2">RAGSCOIN SMART CONTRACT ADDRESS</h6>
+                                    <span class="crypto_address">0xa923180Ef71e81F21b36941Fb62D954AF21C60A3</span>
+                                </div>
                                 <div class="row col-12 mt-2">
-                                    <h6 class="text-white">RAGSCOIN SMART CONTRACT ADDRESS</h6>
-                                    <div class="ei-banner-btn" style="overflow: auto;">
-                                        <span>0xa923180Ef71e81F21b36941Fb62D954AF21C60A3</span>
-                                    </div>                                  
-                                  
+                                    <div class="ei-banner-btn">
+                                        <a style="    width: 173px;
+                                        line-height: 39px;" href="https://pancakeswap.finance/swap#/swap?outputCurrency=0xa923180Ef71e81F21b36941Fb62D954AF21C60A3">Buy Rags Coin</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -514,7 +526,7 @@
         <div class="container">
             <div class="ei-appdownload-content">
                 <div class="row">
-                    
+
                     <div class="col-lg-6">
                         <div class="ei-app-down-text wow fadeFromLeft" data-wow-delay="600ms"
                             data-wow-duration="1500ms">
