Added Smart Contract Address

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                                 By combining a large number of diverse financial analysts and a set of machine- learning
                                 models into a single system, we are developing a Hybrid Intelligence infrastructure for
                                 the efficient management of investors' capital in traditional financial and
-                                crypto-markets.
+                                crypto-markets. <br/><br/> &nbsp;SMART Contract Address<br/>0xa923180Ef71e81F21b36941Fb62D954AF21C60A3
                             </p>
                             <div class="ei-banner-btn">
                                <!-- <a href="#">Buy on Currency ,Crypto , pancake</a> -->
