--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                         </div>
                         <div class="ei-testimonial-text">
                             <div class="ei-testimonial-name appeight-headline pera-content">
-                                <h3>Tech Paper</h3>
+                                <h3>WhitePaper</h3>
                             </div>
                             <a target="_blank" href="./assets/doc/RAGS_WHITEPAPER_OFFICIAL.pdf" download>View Now</a>
                         </div>
