sign in link added

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 </ul>
             </div> -->
             <div class="sign-up-btn-eight text-center float-right clearfix">
-                <a href="#">Sign In</a>
+                <a target="_blank" href="https://www.userragscoin.com/login">Sign In</a>
             </div>
         </div>
         <!-- /desktop-menu -->
