Added signin link userrags

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>rags</title>
+    <title>RAGS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="assets/logo-normal (1).png" type="image/x-icon">
     <link rel="icon" href="assets/logo-normal (1).png" type="image/x-icon">
@@ -170,8 +170,8 @@
             white-space: nowrap;
             text-overflow: ellipsis;
             background-color: transparent;
-
-            font-weight: 600;
+            width: 100%;
+            font-weight: 300;
         }
     </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -228,7 +228,7 @@
                 </ul>
             </div> -->
             <div class="sign-up-btn-eight text-center float-right clearfix">
-                <a href="#">Sign In</a>
+                <a href="https://www.userragscoin.com/login" target="_blank">Sign In</a>
             </div>
         </div>
         <!-- /desktop-menu -->
@@ -346,7 +346,7 @@
                                 <div class="row col-12 mt-2">
                                     <h6 class="text-white">RAGSCOIN SMART CONTRACT ADDRESS</h6>
                                     <div class="ei-banner-btn" style="overflow: auto;">
-                                        <span class="crypto_address">0xa923180Ef71e81F21b36941Fb62D954AF21C60A3</span>
+                                       <h6> <span class="crypto_address">0xa923180Ef71e81F21b36941Fb62D954AF21C60A3</span> </h6>
                                     </div>
 
                                 </div>
