--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 wow bounceInUp" data-wow-duration="2s" data-wow-delay="2s">
                     <div class="content">
-                        <h2 class="title-xlarge mb-30">RAGS For Corporates</h2>
+                        <h2 class="title-xlarge mb-30">RAGS WhitePaper 1.0</h2>
 
                         <p class="mb-30">
                             Rags Partnered with corporates in future to allow merchants to pay rags across the world on
@@ -594,8 +594,7 @@
 
                 <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="content">
-                        <h2 class="title-xlarge mb-30 wow bounceInUp" data-wow-duration="2s" data-wow-delay="1s">white
-                            Paper</h2>
+                        <h2 class="title-xlarge mb-30 wow bounceInUp" data-wow-duration="2s" data-wow-delay="1s">RAGS For Corporate</h2>
 
                         <p class="mb-30 wow bounceInUp" data-wow-duration="2s" data-wow-delay="2s">
                             Rags Partnered with corporates in future to allow merchants to pay rags across the world on
