--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 wow bounceInUp" data-wow-duration="0s" data-wow-delay="1s">
                     <div class="service mb-30 text-center serviceBoxAlign">
                         <div class="icon">
-                            <i class="ion-lock-combination"></i>
+                            <i class="ion-bonfire"></i>
                         </div>
                         <a href="#!">Your Opportunity</a>
                         <p>
@@ -568,7 +568,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 wow bounceInUp" data-wow-duration="1s" data-wow-delay="1s">
                     <div class="service mb-30 text-center serviceBoxAlign">
                         <div class="icon">
-                            <i class="ion-medkit"></i>
+                            <i class="ion-social-usd"></i>
                         </div>
                         <a href="#!">Incentives & Benefits</a>
                         <p>
@@ -584,7 +584,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 wow bounceInUp" data-wow-duration="2s" data-wow-delay="1s">
                     <div class="service mb-30 text-center serviceBoxAlign">
                         <div class="icon">
-                            <i class="ion-ipod"></i>
+                            <i class="ion-speedometer"></i>
                         </div>
                         <a href="#!">Investing is the Future</a>
                         <p>
@@ -609,12 +609,12 @@
 
                 <div class="col-lg-12 col-md-12 col-sm-12 wow bounceInUp" data-wow-duration="0s" data-wow-delay="1s">
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">A Multi-level Hybrid ecosystem</li>
-                        <li class="list-group-item">A reliable and secured payment method</li>
-                        <li class="list-group-item">Establish a new Coin-based economy</li>
-                        <li class="list-group-item">Low transactions fees, high speeds and easy access</li>
-                        <li class="list-group-item">Access to your money anytime, anywhere and get rewarded</li>
-                        <li class="list-group-item">Asset's tokenization (gaming, real estate, education, etc.)</li>
+                        <li class="list-group-item ion-ios-medical"> A Multi-level Hybrid ecosystem</li>
+                        <li class="list-group-item ion-ios-medical"> A reliable and secured payment method</li>
+                        <li class="list-group-item ion-ios-medical"> Establish a new Coin-based economy</li>
+                        <li class="list-group-item ion-ios-medical"> Low transactions fees, high speeds and easy access</li>
+                        <li class="list-group-item ion-ios-medical"> Access to your money anytime, anywhere and get rewarded</li>
+                        <li class="list-group-item ion-ios-medical"> Asset's tokenization (gaming, real estate, education, etc.)</li>
                     </ul>
                 </div>
             </div>
