--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="description"
+        content="First Hybrid Intelligence based Smartchain Ragscoin Based on Binance in the world">
+    <meta name="keywords"
+        content="Ragscoin,Rags,Binance smartchain, Binance Ragscoin, BEP20 Coin India, BEP20 Tokens , First Hybrid intelligence Smartchain , Hybrid intelligence Coin , USDT and ERC20 pairs ,New ERA coins , Best Crypto investments 2021">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Rags</title>
@@ -227,12 +231,12 @@
 
                                     </ul>
                                 </li>
-                                <li>
+                                <!-- <li>
                                     <a href="https://www.userragscoin.com/login">
                                         <i class="ion-ios-person-outline"></i>
                                         Login
                                     </a>
-                                </li>
+                                </li> -->
 
                             </ul>
                         </div>
@@ -301,6 +305,8 @@
                         <li><a href="#donation">Donation</a></li>
                         <li><a href="#chart-section">Roadmap</a></li>
                         <li><a href="#criptocurrency-price-section">How to Buy</a></li>
+                        <li><a href="#join_the_club">Join the club</a></li>
+                        <li><a href="#security">Security</a></li>
                     </ul>
                 </div>
 
@@ -454,10 +460,10 @@
                                     <button class="btn-copy" onClick="copyTextfun()">Copy
                                         Address</button>
                                 </div>
-                                <a href="https://www.userragscoin.com/login" class="custom-btn waves-effect">
+                                <!-- <a href="https://www.userragscoin.com/login" class="custom-btn waves-effect">
                                     Buy Rags Coin
                                     <span><i class="ion-arrow-right-c"></i></span>
-                                </a>
+                                </a> -->
                                 <div class="col-12 row">
                                     <div class="col-md-6 col-sm-12">
                                         <h4 class="mb-3 clr-white">PRICE</h4>
@@ -518,8 +524,8 @@
                         <p>
                             The majority of tokens were locked, while some were burned.
                         </p>
-                        
-                         
+
+
                     </div>
                 </div>
 
@@ -612,14 +618,118 @@
                         <li class="list-group-item ion-ios-medical"> A Multi-level Hybrid ecosystem</li>
                         <li class="list-group-item ion-ios-medical"> A reliable and secured payment method</li>
                         <li class="list-group-item ion-ios-medical"> Establish a new Coin-based economy</li>
-                        <li class="list-group-item ion-ios-medical"> Low transactions fees, high speeds and easy access</li>
-                        <li class="list-group-item ion-ios-medical"> Access to your money anytime, anywhere and get rewarded</li>
-                        <li class="list-group-item ion-ios-medical"> Asset's tokenization (gaming, real estate, education, etc.)</li>
+                        <li class="list-group-item ion-ios-medical"> Low transactions fees, high speeds and easy access
+                        </li>
+                        <li class="list-group-item ion-ios-medical"> Access to your money anytime, anywhere and get
+                            rewarded</li>
+                        <li class="list-group-item ion-ios-medical"> Asset's tokenization (gaming, real estate,
+                            education, etc.)</li>
                     </ul>
                 </div>
             </div>
         </div>
     </section>
+
+
+
+    <section id="security" class="about-section sec-ptb-100 clearfix">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <div class="section-title wow slideInLeft" data-wow-duration="1s" data-wow-delay="1s">
+                        <h3>Rags</h3>
+                        <h2>Security at RAGS</h2>
+                    </div>
+                    <h3>Thousands of clients trust RAGS to automate their crypto trading</h3>
+                </div>
+
+
+                <div class="col-lg-12 col-md-12 col-sm-12 wow bounceInUp" data-wow-duration="2s" data-wow-delay="2s">
+                    <div class="content">
+                        <p class="mb-30">
+                            Embracing Rag's values and being active in enticing with our customers, our team members and
+                            our product, we enhance the security posture of our enterprise, products, and client-dealing
+                            with services</p>
+
+
+                        <p>Our rigorous security policies and approaches are woven into how we perform as a company
+                            with integrity and ethics.Rags does not sell or rent users’ personal or sensitive data to
+                            advertisers or to other third parties that might enable advertisement delivery.
+
+                        </p>
+
+                    </div>
+                    <h5 class="mt-4 mb-3">What we do for Safety</h5>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item ion-ios-medical"> Team of security specialists</li>
+                        <li class="list-group-item ion-ios-medical"> Zero trust principles</li>
+                        <li class="list-group-item ion-ios-medical"> Risk management and standards compliance</li>
+                        <li class="list-group-item ion-ios-medical"> Systematic checks</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="join_the_club" class="about-section clearfix">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <div class="section-title wow slideInLeft" data-wow-duration="1s" data-wow-delay="1s">
+                        <h3>Rags</h3>
+                        <h2>Collective Intelligentedge</h2>
+                    </div>
+                    <h3>Trade crypto, stocks, options with predictive indicators that can help generating huge profits
+                        in few weeks</h3>
+                </div>
+
+                <div class="col-lg-12 col-md-12 col-sm-12 wow bounceInUp" data-wow-duration="2s" data-wow-delay="2s">
+                    <div class="content">
+                        <p class="mb-15">
+                            Every day Artificial Intelligence processes data from analysts to create market forecasts of
+                            70% accuracy — Hybrid Intelligence indicators. Thousands of traders already use indicators
+                            to strengthen their strategies.</p>
+                        <h6>Join the club today</h6>.
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <h5 class="mt-4 mb-3">What you get?</h5>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 wow bounceInUp" data-wow-duration="0s" data-wow-delay="1s">
+                    <div class="service mb-30 text-center serviceBoxAlign2">
+                        <div class="icon">
+                            <i class="ion-bonfire"></i>
+                        </div>
+                        <h4><a href="#!">Proven historical accuracy</a></h4>
+                        <p>
+                            At least 60% of indicators are correct under any market conditions.And it's getting
+                            better every month.</p>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 wow bounceInUp" data-wow-duration="0s" data-wow-delay="1s">
+                    <div class="service mb-30 text-center serviceBoxAlign2">
+                        <div class="icon">
+                            <i class="ion-bonfire"></i>
+                        </div>
+                        <h4><a href="#!">100+ crypto assets, stocks, futures</a></h4>
+                        <p> Covers all major crypto and traditional assets, including Fortune 500 companies, gold
+                            and oil futures, Bitcoin, and major currency pairs</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
 
     <section id="about-section" class="about-section sec-ptb-100 clearfix">
         <div class="container">
@@ -1042,7 +1152,15 @@
 
     <section id="newsletter-section" class="newsletter-section clearfix">
         <div class="container">
-            <div class="row">
+            <div class="row mb-30">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <h3>Rags Spread Love</h3>
+                </div>
+                <div class="col-lg-4 col-md-12 col-sm-12">
+                    <img src="assets/images/rags_gift.jpeg" />
+                </div>
+            </div>
+            <div>
 
                 <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="newsletter-contant">
