--- a/index.html
+++ b/index.html
@@ -1152,19 +1152,20 @@
 
     <section id="newsletter-section" class="newsletter-section clearfix">
         <div class="container">
-            <div class="row mb-30">
-                <div class="col-lg-12 col-md-12 col-sm-12">
-                    <h3>Rags Spread Love</h3>
+            <div class="row">
+                <div class="col-lg-6 col-md-12 col-sm-12">
+                    <div class="col-lg-12 col-md-12 col-sm-12">
+                        <h4>Rags Spread Love</h4>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12">
+                        <img src="assets/images/rags_gift.jpeg" />
+                    </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12">
-                    <img src="assets/images/rags_gift.jpeg" />
-                </div>
-            </div>
-            <div>
+
 
                 <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="newsletter-contant">
-                        <h2 class="title-xlarge mb-15 wow slideInLeft" data-wow-duration="1s" data-wow-delay="1s">
+                        <h2 class="title-xlarge mb-15 wow slideInLeft">
                             Subscribe to our Newsletter</h2>
                         <p class="clr-white">
                             Copyright © 2021 Rags. All Rights Reserved - Privacy Policy - Terms & Conditions. Rags isn't
@@ -1173,56 +1174,59 @@
                             affiliated with RagsCoin
                         </p>
                     </div>
-                </div>
 
-                <div class="col-lg-6 col-md-12 col-sm-12">
-                    <div class="newsletter-form">
-                        <!-- <form action="#"> 
-                            <div class="input-item">
-                                <input type="email" placeholder="Your Email">
-                                <button type="button">submit</button>
+                    <div class="col-lg-12 col-md-12 col-sm-12">
+                        <div class="newsletter-form">
+                            <!-- <form action="#"> 
+                                <div class="input-item">
+                                    <input type="email" placeholder="Your Email">
+                                    <button type="button">submit</button>
+                                </div>
+                            </form> -->
+                            <div class="footer-section mt-3">
+                                <div class="social-list">
+                                    <ul>
+                                        <li class="wow bounceInUp" data-wow-duration="1s" data-wow-delay="0s">
+                                            <a target="_blank" href="https://www.facebook.com/ragsico/"
+                                                class="fab fa-facebook">
+                                            </a>
+                                        </li>
+                                        <li class="wow bounceInUp" data-wow-duration="1s" data-wow-delay="0s">
+                                            <a target="_blank" href="https://www.instagram.com/ragscoin/"
+                                                class="fab fa-instagram">
+                                            </a>
+                                        </li>
+                                        <li class="wow bounceInUp" data-wow-duration="1s" data-wow-delay="1s">
+                                            <a target="_blank" href="https://t.me/ragscoin" class="fab fa-telegram">
+                                            </a>
+                                        </li>
+
+                                        <li class="wow bounceInUp" data-wow-duration="1s" data-wow-delay="1s">
+                                            <a target="_blank" href="https://twitter.com/Ragscoin"
+                                                class="fab fa-twitter">
+                                            </a>
+                                        </li>
+                                        <li class="wow bounceInUp" data-wow-duration="2s" data-wow-delay="1s">
+                                            <a target="_blank" href="https://discord.com/channels/ragscoin"
+                                                class="fab fa-discord">
+                                            </a>
+                                        </li>
+                                        <li class="wow bounceInUp" data-wow-duration="2s" data-wow-delay="1s">
+                                            <a target="_blank" href="https://www.reddit.com/user/ragscoin"
+                                                class="fab fa-reddit">
+                                            </a>
+                                        </li>
+
+                                    </ul>
+                                </div>
                             </div>
-                        </form> -->
-                        <div class="footer-section mt-3">
-                            <div class="social-list">
-                                <ul>
-                                    <li class="wow bounceInUp" data-wow-duration="1s" data-wow-delay="0s">
-                                        <a target="_blank" href="https://www.facebook.com/ragsico/"
-                                            class="fab fa-facebook">
-                                        </a>
-                                    </li>
-                                    <li class="wow bounceInUp" data-wow-duration="1s" data-wow-delay="0s">
-                                        <a target="_blank" href="https://www.instagram.com/ragscoin/"
-                                            class="fab fa-instagram">
-                                        </a>
-                                    </li>
-                                    <li class="wow bounceInUp" data-wow-duration="1s" data-wow-delay="1s">
-                                        <a target="_blank" href="https://t.me/ragscoin" class="fab fa-telegram">
-                                        </a>
-                                    </li>
 
-                                    <li class="wow bounceInUp" data-wow-duration="1s" data-wow-delay="1s">
-                                        <a target="_blank" href="https://twitter.com/Ragscoin" class="fab fa-twitter">
-                                        </a>
-                                    </li>
-                                    <li class="wow bounceInUp" data-wow-duration="2s" data-wow-delay="1s">
-                                        <a target="_blank" href="https://discord.com/channels/ragscoin"
-                                            class="fab fa-discord">
-                                        </a>
-                                    </li>
-                                    <li class="wow bounceInUp" data-wow-duration="2s" data-wow-delay="1s">
-                                        <a target="_blank" href="https://www.reddit.com/user/ragscoin"
-                                            class="fab fa-reddit">
-                                        </a>
-                                    </li>
-
-                                </ul>
-                            </div>
                         </div>
-
                     </div>
                 </div>
+
             </div>
+
         </div>
     </section>
 
