--- a/index.html
+++ b/index.html
@@ -743,12 +743,12 @@
                     <p>Below are links to our official white paper and independent report!</p>
                 </div>
 
-                <div class="col-lg-6 col-md-12 col-sm-12 text-center">
+                <div class="col-lg-4 col-md-12 col-sm-12 text-center">
                     <div class="chart-img">
-                        <img src="assets/img/logo-square.png" style="width: 72%;" alt="chart_image_not_found">
+                        <img src="assets/img/logo-square.png" style="width: 100%;" alt="chart_image_not_found">
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 wow bounceInUp" data-wow-duration="2s" data-wow-delay="2s">
+                <div class="col-lg-8 col-md-12 col-sm-12 wow bounceInUp" data-wow-duration="2s" data-wow-delay="2s">
                     <div class="content">
                         <h2 class="title-xlarge mb-30">RAGS WhitePaper 1.0</h2>
 
@@ -762,6 +762,12 @@
                                 View WhitePaper
                             </a>
                         </div>
+                        <ul class="logos">
+                            <li><a href="https://nomics.com/assets/ragscoin-rags" target="_blank"><img src="assets/images/nomics.png" /></a></li>
+                            <li><a href="https://www.coingecko.com/en" target="_blank"><img src="assets/images/coinGecko.png" /></a></li>
+                            <li><a href="https://thebittimes.com/token-RAGSCOIN-BSC-0xa923180ef71e81f21b36941fb62d954af21c60a3.html" target="_blank"><img src="assets/images/bittimes.png" /></a></li>
+                            <li><a href="https://dexmon.com/PancakeSwapV2/token/0xa923180ef71e81f21b36941fb62d954af21c60a3" target="_blank"><img src="assets/images/dexmon.png" /></a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -1155,7 +1161,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="col-lg-12 col-md-12 col-sm-12">
-                        <h4>Rags Spread Love</h4>
+                        <h3>RAGS Spread Love</h3>
                     </div>
                     <div class="col-lg-6 col-md-12 col-sm-12">
                         <img src="assets/images/rags_gift.jpeg" />
