--- a/index.html
+++ b/index.html
@@ -763,12 +763,12 @@
                                 View WhitePaper
                             </a>
                         </div>
-                        <ul class="logos">
+                        <!-- <ul class="logos">
                             <li><a href="https://nomics.com/assets/ragscoin-rags" target="_blank"><img src="assets/images/nomics.png" /></a></li>
                             <li><a href="https://www.coingecko.com/en" target="_blank"><img src="assets/images/coinGecko.png" /></a></li>
                             <li><a href="https://thebittimes.com/token-RAGSCOIN-BSC-0xa923180ef71e81f21b36941fb62d954af21c60a3.html" target="_blank"><img src="assets/images/bittimes.png" /></a></li>
                             <li><a href="https://dexmon.com/PancakeSwapV2/token/0xa923180ef71e81f21b36941fb62d954af21c60a3" target="_blank"><img src="assets/images/dexmon.png" /></a></li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
             </div>
