--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
                         <h2>Join our documents</h2>
                         <p>Below are links to our official white paper and independent report!</p>
                     </div>
-                    
+
                 </div>
 
                 <div class="col-lg-4 col-md-12 col-sm-12 text-center">
@@ -763,12 +763,17 @@
                                 View WhitePaper
                             </a>
                         </div>
-                        <!-- <ul class="logos">
-                            <li><a href="https://nomics.com/assets/ragscoin-rags" target="_blank"><img src="assets/images/nomics.png" /></a></li>
-                            <li><a href="https://www.coingecko.com/en" target="_blank"><img src="assets/images/coinGecko.png" /></a></li>
-                            <li><a href="https://thebittimes.com/token-RAGSCOIN-BSC-0xa923180ef71e81f21b36941fb62d954af21c60a3.html" target="_blank"><img src="assets/images/bittimes.png" /></a></li>
-                            <li><a href="https://dexmon.com/PancakeSwapV2/token/0xa923180ef71e81f21b36941fb62d954af21c60a3" target="_blank"><img src="assets/images/dexmon.png" /></a></li>
-                        </ul> -->
+                        <h3>As seen in</h3>
+                        <ul class="logos">
+                            <li><a href="https://nomics.com/assets/ragscoin-rags" target="_blank"><img
+                                        src="assets/images/nomics.png" /></a></li>
+                            <li><a href="https://www.coingecko.com/en" target="_blank"><img
+                                        src="assets/images/gecko.png" /></a></li>
+                            <li><a href="https://thebittimes.com/token-RAGSCOIN-BSC-0xa923180ef71e81f21b36941fb62d954af21c60a3.html"
+                                    target="_blank"><img src="assets/images/bittimes.png" /></a></li>
+                            <li><a href="https://dexmon.com/PancakeSwapV2/token/0xa923180ef71e81f21b36941fb62d954af21c60a3"
+                                    target="_blank"><img src="assets/images/dexmon.png" /></a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -1167,6 +1172,11 @@
                     <div class="col-lg-6 col-md-12 col-sm-12">
                         <img src="assets/images/rags_gift.jpeg" />
                     </div>
+                    <div class="spreadL">
+                        <h6>Rags spreading the love through their Business and making global corporate community through
+                            electric scooter</h6>
+                    </div>
+
                 </div>
 
 
