--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="section-title wow slideInLeft" data-wow-duration="1s" data-wow-delay="1s">
                         <h3>Rags</h3>
-                        <h2>Collective Intelligentedge</h2>
+                        <h2>Collective Intelligence  Edge</h2>
                     </div>
                     <h3>Trade crypto, stocks, options with predictive indicators that can help generating huge profits
                         in few weeks</h3>
