--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                                     <strong><span class="clr-yellow"> Asset Management Platform Using Hybrid
                                             Intelligence</span></strong>
                                 </h1>
-                                <h4 style="color:#fff;">A Perfect Mix Between Stable Coins And Perfoemance Coins</h4>
+                                <h4 style="color:#fff;">A Perfect Mix Between Stable Coins And Performance Coins</h4>
                                 <p>&nbsp;</p>
                                 <p class="slider-desc clr-white mb-30 wow bounceInUp" data-wow-duration="2s"
                                     data-wow-delay="1s">
