--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
                             Every day Artificial Intelligence processes data from analysts to create market forecasts of
                             70% accuracy — Hybrid Intelligence indicators. Thousands of traders already use indicators
                             to strengthen their strategies.</p>
-                        <h6>Join the club today</h6>.
+                        <h6>Join the club today.</h6>
                     </div>
                 </div>
             </div>
