Changes in Meta tags & Add Google Analytics

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="description"
-        content="First Hybrid Intelligence based Smartchain Ragscoin Based on Binance in the world">
+        content="First Hybrid Intelligence Ragscoin Based on Binance in the world. Rags giving holders the opportunity of having an asset with reserve fund working to preserve its rate">
     <meta name="keywords"
         content="Ragscoin,Rags,Binance smartchain, Binance Ragscoin, BEP20 Coin India, BEP20 Tokens , First Hybrid intelligence Smartchain , Hybrid intelligence Coin , USDT and ERC20 pairs ,New ERA coins , Best Crypto investments 2021">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Rags</title>
+    <title>First Hybrid Intelligence Coin | Best Crypto Investment 2022 | Ragscoin</title>
     <link rel="shortcut icon" href="assets/img/logo-square.png">
 
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
@@ -171,6 +171,17 @@
             }
         }
     </style>
+
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-EF6RLVSFZF"></script>
+      <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+  
+      gtag('config', 'G-EF6RLVSFZF');
+      </script>
+      
 </head>
 
 <body id="thetop" class="thetop">
