Added Bitcoin Talk social media link

--- a/index.html
+++ b/index.html
@@ -239,6 +239,11 @@
                                                 class="fab fa-reddit">
                                             </a>
                                         </li>
+                                        <li>
+                                            <a target="_blank" href="https://bitcointalk.org/index.php?action=profile;u=3431693"
+                                                class="fab fa-btc">    
+                                            </a>
+                                        </li>
 
                                     </ul>
                                 </li>
@@ -1180,6 +1185,11 @@
                                         <li class="wow bounceInUp" data-wow-duration="2s" data-wow-delay="1s">
                                             <a target="_blank" href="https://www.reddit.com/user/ragscoin"
                                                 class="fab fa-reddit">
+                                            </a>
+                                        </li>
+                                        <li class="wow bounceInUp" data-wow-duration="2s" data-wow-delay="1s">
+                                            <a target="_blank" href="https://bitcointalk.org/index.php?action=profile;u=3431693" 
+                                                class="fab fa-btc">
                                             </a>
                                         </li>
 
