Added Comment line for log

--- a/index.html
+++ b/index.html
@@ -1350,8 +1350,8 @@
                 type: "GET",
                 url: "https://api.pancakeswap.info/api/v2/tokens/0xa923180ef71e81f21b36941fb62d954af21c60a3",
                 success: function (res) {
-                    console.log("............")
-                    console.log(res);
+                    //  console.log("............")
+                    //  console.log(res);
                     document.getElementById("price").innerHTML = res.data.price;
                     document.getElementById("bnbprice").innerHTML = res.data.price_BNB;
                 }
