--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@
                         <li><a href="#criptocurrency-price-section">How to Buy</a></li>
                         <li><a href="#join_the_club">Join the club</a></li>
                         <li><a href="#security">Security</a></li>
+                        <li><a href="http://userragscoin.com/" target="_blank"> Buy Now</a></li>
                     </ul>
                 </div>
 
